@@ -181,3 +181,5 @@ VDR Plugin 'satip' Revision History
 - Added Polish translation (Thanks to Tomasz Nowak).
 - Updated Catalan and Spanish translations (Thanks to Gabriel Bonich).
 - Added support for KATHREIN SatIP Server (Thanks to kavanu).
+- Added support for FRITZ!Box 6490 Cable (Thanks to 9000h).
+- Updated FRITZ!WLAN Repeater DVB-C detection for the latest firmware (Thanks to 9000h).
